// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileSliderSkeleton > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with dots 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3 flex h-3 justify-center gap-3 leading-3"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton h-3 w-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton h-3 w-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with length 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-200 dark:border-theme-secondary-800 dim:border-theme-dim-700 flex items-center justify-between rounded-lg border p-1"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="bg-theme-secondary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-800 h-10 w-10 rounded"
        />
        <div
          class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 group-hover:text-theme-navy-700 dim:text-theme-dim-200 mr-1.5 pr-1.5 transition-colors duration-200"
        >
          <div
            style="height: 16px; width: 16px;"
          >
            <svg
              fill="none"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="10.002"
                cy="2.99609"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 2.99609)"
              />
              <circle
                cx="10.002"
                cy="9.99805"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 9.99805)"
              />
              <circle
                cx="10.002"
                cy="17"
                fill="currentColor"
                r="2"
                transform="rotate(90 10.002 17)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
